--- a/CinePicker/Common/Components/LoadingTableViewCell.xib
+++ b/CinePicker/Common/Components/LoadingTableViewCell.xib
@@ -21,10 +21,20 @@
                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="ySI-fI-EzP">
                             <rect key="frame" x="169" y="21.5" width="37" height="37"/>
                         </activityIndicatorView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="haA-LK-a8l" userLabel="Bottom Bar View">
+                            <rect key="frame" x="0.0" y="79.5" width="375" height="0.5"/>
+                            <color key="backgroundColor" red="0.1960784314" green="0.1960784314" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="0.5" id="DTQ-6g-pcO"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="0.078431372550000003" green="0.078431372550000003" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="ySI-fI-EzP" firstAttribute="centerY" secondItem="iQg-pe-8aZ" secondAttribute="centerY" id="BDU-FB-ebM"/>
+                        <constraint firstAttribute="bottom" secondItem="haA-LK-a8l" secondAttribute="bottom" id="WgA-Za-dia"/>
+                        <constraint firstAttribute="trailing" secondItem="haA-LK-a8l" secondAttribute="trailing" id="hLg-Sx-Tkx"/>
+                        <constraint firstItem="haA-LK-a8l" firstAttribute="leading" secondItem="iQg-pe-8aZ" secondAttribute="leading" id="sQ9-pq-qVg"/>
                         <constraint firstItem="ySI-fI-EzP" firstAttribute="centerX" secondItem="iQg-pe-8aZ" secondAttribute="centerX" id="yvD-FH-jLm"/>
                     </constraints>
                 </view>
@@ -42,7 +52,7 @@
             <connections>
                 <outlet property="loadingActivityIndicator" destination="ySI-fI-EzP" id="5Ns-bl-16m"/>
             </connections>
-            <point key="canvasLocation" x="-280.80000000000001" y="74.212893553223395"/>
+            <point key="canvasLocation" x="-280.80000000000001" y="73.763118440779621"/>
         </view>
     </objects>
 </document>
